# cyrano

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: projects.yml
config/projects/dealcred/: filters.yml  personality.yml  subreddits.yml
config/projects/default/: filters.yml  personality.yml  subreddits.yml
config/projects/matcha/: filters.yml  personality.yml  subreddits.yml
config/projects/rowcraft/: filters.yml  personality.yml  subreddits.yml
cyrano/: __init__.py  __main__.py  config.py  models.py  pipeline.py  scheduler.py
cyrano/analyzers/: __init__.py  base.py  llm_client.py  pipeline.py
cyrano/exporters/: __init__.py  csv_exporter.py
cyrano/filters/: __init__.py  dedup.py  rule_filter.py
cyrano/personas/: __init__.py  loader.py  prompt_builder.py
cyrano/reddit/: __init__.py  poster.py
cyrano/scanners/: __init__.py  reddit.py  registry.py
cyrano/storage/: __init__.py  approvals.py  campaigns.py  db.py  feedback.py  post_history.py  progress.py  scan_history.py  signals.py
cyrano/telegram/: __init__.py  bot.py  formatter.py
docs/: architecture.md
