[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyrano"
version = "0.1.0"
description = "Value-first Reddit reply assistant with Telegram approval flow"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.14"
keywords = ["reddit", "ai", "community", "outreach", "telegram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "litellm>=1.40.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "praw>=7.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
cyrano = "cyrano.__main__:main"

[tool.setuptools.packages.find]
include = ["cyrano*"]

[tool.ruff]
line-length = 100
target-version = "py314"
